flexbox: fix chrome flex overflow bug for sidebar

--- a/public/js/components/Base/Sidebar.sass
+++ b/public/js/components/Base/Sidebar.sass
@@ -1,5 +1,4 @@
 .sidebar
-  display: flex
   flex-direction: column
   flex-shrink: 0
 
